# drv

./: .gitattributes  .gitignore  .sweep_bfs.sbatch.swp  .verify.sbatch.swp  CMakeLists.txt  L2SP_LATENCY_README.md  LICENSE  Makefile  README.md  SSTRISCVCore.cpp  SSTRISCVCore.hpp  USAGE.md  analyze_l2sp_latency.py  atomic_bw_blocking.sbatch  atomic_bw_posted.sbatch  bfs_csr_shared_queue.sbatch  bfs_csr_shared_queue_baseline.sbatch  bfs_csr_shared_queue_multi.sbatch  bfs_csr_sq_cache_sweep.sbatch  bfs_csr_sq_compare.sbatch  bfs_csr_sq_l1cache.sbatch  bfs_csr_sq_latency_sweep.sbatch  bfs_csr_weak.sbatch  bfs_csr_weak_multi.sbatch  bfs_csr_weak_roi.sbatch  bfs_csr_weak_roi_multi.sbatch  bfs_csr_work_stealing.sbatch  bfs_imbalanced_baseline.cpp  bfs_pgas.sbatch  bfs_pgas_scatter.sbatch  bfs_roofline_analysis.py  bfs_roofline_comparison.py  bfs_roofline_from_stats.py  bfs_tiered_faa.sbatch  bfs_tiered_wq.sbatch  bfs_tiered_wq_faa.sbatch  build_docker_image.sh  build_drvx_deps.sh  build_flow.txt  drv_bfs_build_run.sbatch  (+54 more)
api/: CMakeLists.txt  DrvAPI.hpp  DrvAPIAddress.hpp  DrvAPIAddressMap.cpp  DrvAPIAddressMap.hpp  DrvAPIAddressToNative.cpp  DrvAPIAllocator.cpp  DrvAPIAllocator.hpp  DrvAPIBits.hpp  DrvAPICoreXY.hpp  DrvAPIDMA.cpp  DrvAPIDMA.hpp  DrvAPIFunction.cpp  DrvAPIFunction.hpp  DrvAPIGlobal.cpp  DrvAPIGlobal.hpp  DrvAPIInfo.hpp  DrvAPIMain.hpp  DrvAPIMemory.cpp  DrvAPIMemory.hpp  DrvAPIOp.hpp  DrvAPIPGASTranslation.hpp  DrvAPIPointer.hpp  DrvAPIReadModifyWrite.hpp  DrvAPISection.cpp  DrvAPISection.hpp  DrvAPISysConfig.cpp  DrvAPISysConfig.hpp  DrvAPISystem.hpp  DrvAPIThread.cpp  DrvAPIThread.hpp  DrvAPIThreadState.cpp  DrvAPIThreadState.hpp  DrvAPIVar.hpp  Makefile
baseline/: Makefile  cmake_install.cmake
baseline_16c/: Makefile  cmake_install.cmake
baseline_4c/: Makefile  cmake_install.cmake
baseline_64c/: Makefile  cmake_install.cmake
baseline_8c/: Makefile  cmake_install.cmake
baselinle_32c/: Makefile  cmake_install.cmake
bfs_16c/: Makefile  cmake_install.cmake
bfs_32c/: Makefile  cmake_install.cmake
bfs_4c/: Makefile  cmake_install.cmake
bfs_64c/: Makefile  cmake_install.cmake
bfs_8c/: Makefile  cmake_install.cmake
build_codex/: Makefile  cmake_install.cmake
build_l1sp/: Makefile  cmake_install.cmake
build_l1sp_16c/: Makefile  cmake_install.cmake
build_l1sp_32c/: Makefile  cmake_install.cmake
build_l1sp_4c/: Makefile  cmake_install.cmake
build_l1sp_64c/: Makefile  cmake_install.cmake
build_l1sp_8c/: Makefile  cmake_install.cmake
build_l1sp_b/: Makefile  cmake_install.cmake
build_stampede/: CMakeCache.txt  Makefile  a.out  cmake_install.cmake
build_tiered_faa/: Makefile  cmake_install.cmake
cmake/: CMakeLists.txt  DRVInclude.cmake  FindDRV.cmake  FindDRV.cmake.in
cmake-drvr-example/: CMakeLists.txt  command_processor.cpp  hello.c
cmake-drvx-example/: CMakeLists.txt  main.cpp
docker/: .dockerignore  Dockerfile
drvr/: CMakeCache.txt  CMakeLists.txt  L2SP_LATENCY_BUILD.cmake  Makefile  add.S  addressmap.c  atomic_bw.cpp  attention  attn_fixed  attn_fixed.cpp  bfs  bfs_csr_shared_queue.cpp  bfs_csr_shared_queue_baseline.cpp  bfs_csr_shared_queue_multi.cpp  bfs_csr_weak.cpp  bfs_csr_weak_multi.cpp  bfs_csr_weak_multi_roi.cpp  bfs_csr_weak_roi.cpp  bfs_csr_work_stealing.cpp  bfs_grid.cpp  bfs_grid_multith.cpp  bfs_imbalanced_baseline.cpp  bfs_l1sp_visited_filter.cpp  bfs_multi_sw  bfs_multihart.cpp  bfs_pgas.cpp  bfs_pgas_scatter.cpp  bfs_plot_utils.py  bfs_sw_hw_multi.cpp  bfs_sw_hw_multi2.cpp  bfs_sw_hw_multi3.cpp  bfs_sw_hw_multi_barrier.cpp  bfs_sw_hw_multi_final.cpp  bfs_sw_hw_multi_l2sp.cpp  bfs_sw_multi.cpp  bfs_tiered_work_queue.cpp  bfs_tiered_wq_faa.cpp  bfs_work_stealing.cpp  bfs_work_stealing_adaptive.cpp  bfs_work_stealing_faa.cpp  (+71 more)
drvx/: CMakeLists.txt  addrmap.cpp  allocator.cpp  amoadd.cpp  argv.cpp  atomic_read_back.cpp  dma.cpp  flushinv.cpp  gups.cpp  info.cpp  leiden_single.cpp  mem.cpp  multicore.cpp  multicoreamoadd.cpp  pointer.cpp  runtime.cpp  runtime_main.cpp  simple.cpp  stride.cpp  tc.cpp  to_address.cpp  to_native.cpp
e_larger_graph/: Makefile  cmake_install.cmake
element/: CMakeLists.txt  DrvAddressMap.cpp  DrvAddressMap.hpp  DrvCore.cpp  DrvCore.hpp  DrvCustomRamulatorMem.cpp  DrvCustomRamulatorMem.hpp  DrvCustomStdMem.cpp  DrvCustomStdMem.hpp  DrvEvent.hpp  DrvMemory.cpp  DrvMemory.hpp  DrvNativeSimulationTranslator.cpp  DrvNativeSimulationTranslator.hpp  DrvNopEvent.hpp  DrvSelfLinkMemory.cpp  DrvSelfLinkMemory.hpp  DrvSimpleMemory.cpp  DrvSimpleMemory.hpp  DrvStatsTable.hpp  DrvStdMemory.cpp  DrvStdMemory.hpp  DrvSysConfig.hpp  DrvSystem.cpp  DrvSystem.hpp  DrvThread.cpp  DrvThread.hpp  FwdCore.cpp  FwdCore.hpp  FwdThread.cpp  FwdThread.hpp  Makefile  SSTRISCVCore.cpp  SSTRISCVCore.hpp  SSTRISCVHart.hpp  SSTRISCVSimulator.cpp  SSTRISCVSimulator.hpp
element/rv64simtypes/: fcntl.h  stat.h  types.h
graph_creation/: adjacency_converter.py  adjecency_symmetric.py  graph_edge_symmetric.c  graph_edges.c  static_converter.py
interpreter/: CMakeLists.txt  ICache.hpp  ICacheBacking.hpp  InstructionTable.h  Makefile  RISCVDecoder.hpp  RISCVHart.hpp  RISCVInstruction.hpp  RISCVInstructionBase.hpp  RISCVInterpreter.hpp  RISCVRegisterIndices.h  RV64IInterpreter.hpp  RV64IMFInterpreter.hpp  RV64IMInterpreter.hpp  formatter.py  interpreter.cpp
larger_graph_usage/: Makefile  cmake_install.cmake
logs/: bfs_sweep_2826152.err  bfs_sweep_2826152.out  bfs_verify_2826132.err  bfs_verify_2826132.out  bfs_verify_2826240.err  bfs_verify_2826240.out  bfs_verify_2826258.out  bfs_verify_2829028.err  bfs_verify_2829028.out  bfs_verify_2829037.out  bfs_verify_2829097.out  bfs_verify_2829779.out  bfs_verify_2830280.out  bfs_verify_2830311.out  bfs_verify_2832224.err  bfs_verify_2832224.out  bfs_verify_2834507.err  bfs_verify_2834507.out  bfs_verify_2834547.out  (+22 more)
pandocommand/: CMakeLists.txt  control.cpp  default.cpp  executable.hpp  loader.cpp
pandohammer/: CMakeLists.txt  bsg_link.ld  common.mk  crt.S  lock.c
pandohammer/pandohammer/: address.h  atomic.h  cpuinfo.h  hartsleep.h  mmio.h  register.h  stringify.h
(+2055 files in other folders)
